--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,4 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - 8000:8000
+    command: gunicorn --bind 0.0.0.0:8000 backend.bloghub.bloghub.wsgi:application
